--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
 
     <div class="container">
         <h1 class="h1 text-center">Stopwatch</h1>
-        <p class="text-center"><span>00</span>:<span>00</span></p>
+        <p class="text-center">Seconds : Minutes : Hours</p>
+        <p class="text-center"><time><span id="seconds">00</span>:<span id="minutes">00</span>:<span id="hours">00</span></time></p>
         <div class="row">
             <div class="col-sm">
-                <button class="btn btn-outline-dark" id="start">Start</button>
+                <button class="btn btn-outline-dark" id="start" onclick="start()">Start</button>
             </div>
             <div class="col-sm">
-                <button class="btn btn-outline-dark" id="stop">Stop</button>
+                <button class="btn btn-outline-dark" id="stop" onclick="stop()">Stop</button>
             </div>
             <div class="col-sm">
-                <button class="btn btn-outline-dark" id="reset">Reset</button>
+                <button class="btn btn-outline-dark" id="reset" onclick="reset()">Reset</button>
             </div>
         </div>
     </div>
